welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: reassignment to val
if(estFaceMur=false){
             ^